etc/tests/fuzz/errors/attr/async-effects-jit.nshape
shape attr-async-effects-jit {
  family "compiler-errors/attr"
  generator "error"
  features ["error", "attr", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "conflicting attributes '@jit' and '@async_effects'"
  source ny <<'NY'
@jit
@async_effects
fn bad_async_effects_combo() {
   1
}
NY
}
